# tsw_io

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  mise.toml  mix.exs
.claude/: settings.local.json
.claude/agents/: elixir-code-architect.md
.github/workflows/: ci.yml  release.yml
assets/css/: app.css
assets/js/: app.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: TSW_API_GUIDE.md  architecture.md  development.md  getting-started.md  hardware-setup.md  train-configuration.md
lib/: tsw_io.ex  tsw_io_web.ex
lib/tsw_io/: app_version.ex  application.ex  device.ex  firmware.ex  hardware.ex  paths.ex  repo.ex  train.ex
lib/tsw_io/app_version/: update_checker.ex
lib/tsw_io/firmware/: avrdude.ex  board_config.ex  downloader.ex  file_path.ex  firmware_file.ex  firmware_release.ex  update_check.ex  update_checker.ex  upload_history.ex  upload_manager.ex  uploader.ex
lib/tsw_io/hardware/: configuration_manager.ex  device.ex  input.ex
lib/tsw_io/serial/: connection.ex  discovery.ex
lib/tsw_io_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
priv/repo/: seeds.exs
scripts/: build-desktop.sh  build-macos.sh  update-version.sh
tauri/: package-lock.json  package.json
tauri/src/: index.html
tauri/src-tauri/: Cargo.toml  splash.html  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: lib.rs  main.rs
test/: test_helper.exs
test/support/: conn_case.ex  data_case.ex  serial_test_helpers.ex
test/tsw_io/: firmware_test.exs  hardware_test.exs
(+71 files in other folders)
