[package]
name = "tsw-io"
version = "0.1.3"
description = "tsw_io - Bridge hardware to Train Sim World"
authors = ["Alberto Restifo"]
license = "CC-BY-NC-4.0"
repository = "https://github.com/albertorestifo/tws_io"
edition = "2021"

[lib]
name = "tsw_io_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["time"] }
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
